# genworlds

./: BETA_RELEASE_NOTES.md  CHANGELOG.md  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/: package-lock.json  package.json
genworlds/: __init__.py
genworlds/agents/abstracts/: agent.py  agent_state.py  thought.py
genworlds/agents/concrete/basic_assistant/: action_planner.py  actions.py  agent.py  state_manager.py  utils.py
genworlds/agents/memories/: simulation_memory.py
genworlds/agents/utils/: validate_action.py
genworlds/events/abstracts/: action.py  event.py
genworlds/simulation/: __init__.py  communication_bus.py  config.py  metrics.py  simulation.py
genworlds/simulation/sockets/: client.py  server.py  test_client.py
genworlds/simulation/sockets/handlers/: event_handler.py
genworlds/simulation/utils/: launch_simulation.py
genworlds/worlds/abstracts/: world.py  world_entity.py
tests/integration/: __init__.py  test_websocket_integration.py
tests/unit/: test_config.py  test_events.py  test_metrics.py  test_server.py  test_validate_action.py  test_world_actions.py  test_yaml_security.py
use_cases/foundational_rag/objects/: local_storage_bucket.py  qdrant_bucket.py
use_cases/roundtable/: events.py  mocked_socket_generator.py  world_setup.py
use_cases/roundtable/agents/: roundtable_agent.py
use_cases/roundtable/migrations/: chroma_to_qdrant_migration.py
use_cases/roundtable/objects/: blackboard.py  microphone.py
use_cases/roundtable/thoughts/: event_filler_thought.py  navigation_thought.py  podcast_thought.py
(+5 files in other folders)
