[tool.poetry]
name = "genworlds"
version = "0.1.0"
description = "GenWorlds by YeagerAI: Pioneering AI-based simulations based on collaborative autonomous agents."
authors = []

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
click = "8.1.7"
colorama = "0.4.6"
colorlog = "6.8.2"
fastapi = "0.115.5"
fastjsonschema = "2.21.1"
jsonschema = "4.23.0"
langchain = "0.3.7"
langchain-core = "0.3.19"
langchain-openai = "0.2.9"
langchain-community = "0.3.7"
openai = "1.54.4"
prompt-toolkit = "3.0.48"
pydantic = "2.9.2"
python-dotenv = "1.0.1"
qdrant-client = "1.12.1"
tiktoken = "0.8.0"
uvicorn = "0.32.1"
websocket-client = "1.8.0"
websockets = "13.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
black = "^24.10.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
mypy = "^1.13.0"
poetry = "1.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
